<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:layout_margin="12dp"
    android:background="#FFFFFFFF">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/previous_time_scheduie"
        android:id="@+id/time_schedules"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_below="@id/time_schedules"
        android:paddingTop="8dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="40"
            android:layout_height="wrap_content"
            android:text="@string/previous_match_home_team"
            android:textSize="16sp"
            android:textAlignment="center"
            android:id="@+id/team_homes"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="@string/previous_match_home_score"
            android:textAlignment="center"
            android:id="@+id/score_homes"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/previous_match_vs"
            android:layout_weight="10"
            android:textSize="14sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="@string/previous_match_away_score"
            android:textAlignment="center"
            android:id="@+id/score_aways"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/previous_match_away_team"
            android:layout_weight="40"
            android:textAlignment="center"
            android:id="@+id/team_aways"
            android:textSize="16sp"/>

    </LinearLayout>

</RelativeLayout>