<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:contentDescription="@string/player_thumbnail_dummy_text"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_background"
        android:id="@+id/player_thumbnail_image"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_name_dummy_text"
        android:padding="8dp"
        android:id="@+id/player_name_details"
        app:layout_constraintTop_toBottomOf="@id/player_thumbnail_image"
        android:textSize="20sp"
        android:textColor="@android:color/background_dark"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/position_dummy_text"
        app:layout_constraintTop_toBottomOf="@id/player_name_details"
        android:textSize="16sp"
        android:padding="2dp"
        android:id="@+id/player_position_details"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearlayout_player_details_text"
        app:layout_constraintTop_toBottomOf="@id/player_position_details"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:text="@string/height_text"
            android:textAlignment="center"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:text="@string/weight_text"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearlayout_player_details"
        app:layout_constraintTop_toBottomOf="@id/linearlayout_player_details_text"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:text="@string/player_height_dummy_text"
            android:id="@+id/player_height_details"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="50"
            android:id="@+id/player_weight_details"
            android:text="@string/player_weight_dummy_text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"/>

        </LinearLayout>

    <ScrollView
        android:id="@+id/scrollview_player_details"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_player_details">

        <TextView
            android:id="@+id/player_details_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="22dp"
            android:text="@string/team_detail_overview_dummy_text" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>