<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:layout_margin="16dp"
    android:background="#FFFFFFFF">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/next_match_time_schedule"
        android:id="@+id/time_schedule"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_below="@id/time_schedule"
        android:paddingTop="8dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="40"
            android:layout_height="wrap_content"
            android:text="@string/next_match_home_team"
            android:textSize="16sp"
            android:textAlignment="center"
            android:id="@+id/team_home"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/next_match_vs"
            android:layout_weight="20"
            android:textSize="14sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/next_match_away_team"
            android:layout_weight="40"
            android:textAlignment="center"
            android:id="@+id/team_away"
            android:textSize="16sp"/>

    </LinearLayout>

</RelativeLayout>
